# terminal-radio

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  pyproject.toml  setup.cfg
terminal_radio/: __init__.py  __main__.py  app.py  main.py
terminal_radio/controllers/: log.py  options.py  player.py  stations.py  utils.py
terminal_radio/events/: config.py
terminal_radio/models/: station.py
terminal_radio/ui/: add_station.py  delete_station.py  edit_station.py  log.py  main.py  options.py  quit.py  screens.py  search.py  widgets.py
terminal_radio/ui/widgets/: spectrum.py
terminal_radio/utils/: config.py
