[tool.poetry]
name = "terminal-radio"
version = "0.0.5"
description = "A terminal-based internet radio player"
authors = ["Vladislav Boiko <vl4gh7@gmail.com>"]
packages = [{include = "terminal_radio"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^3.0.0"
sounddevice = "^0.4.6"
numpy = "^2.2.4"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.27.1"
requests = "^2.32.3"

[tool.poetry.scripts]
terminal-radio = "terminal_radio.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
