[setup.cfg]
[metadata]
name = radio-player
version = 0.1.0
description = A terminal-based internet radio player with station management and volume control.
author = Vladislav Boiko
author_email = vl4gh7@gmail.com
url = https://github.com/vlaght/radio-player
license = MIT

[options]
packages = find:
install_requires =
    textual
    # Add other dependencies here

[options.entry_points]
console_scripts =
    radio-player = src.main:main

[options.packages.find]
where = src
