[setup.cfg]
[metadata]
name = terminal-radio
version = 0.0.1
description = A terminal-based internet radio player with station management and volume control.
long_description = file: README.md
long_description_content_type = text/markdown
author = Vladislav Boiko
author_email = vl4gh7@gmail.com
url = https://github.com/vlaght/terminal-radio
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Topic :: Multimedia :: Sound/Audio :: Players

[options]
packages = find:
install_requires =
    textual>=3.0.0
    python-vlc>=3.0.20123


[options.entry_points]
console_scripts =
    terminal-radio = terminal_radio.app:main

[options.packages.find]
where = terminal_radio
